fix: utils tests